2005-01-26  Douglas Bates  <bates@bates7>

	* R/AllGeneric.R: Added matrix exponential generic expm and a method
	for the geMatrix class.

2005-01-24  Douglas Bates  <bates@bates7>

	* src/Makefile (clean): Remove *.a and *.so

	* man/cscBlocked-class.Rd: Remove reference to the lmer-class.

2005-01-23  Douglas Bates  <bates@bates7>

	* src/lmer.c (Lind): Definition of Lind was backwards.  This only
	had an effect in cases with more than 2 grouping factors.

2005-01-03  Douglas Bates  <bates@bates1-home>

	* src/lmeRep.c (lmer_variances): change from lmeRep to lmer

2004-12-23  Douglas Bates  <bates@bates1-home>

	* src/init.c (R_init_Matrix): Reorder calls to R_registerRoutines
	and R_useDynamicSymbols (suggested by B.D.Ripley).

2004-12-14  Douglas Bates  <bates@bates1-home>

	* R/sscMatrix.R: Add determinant methods

	* src/triplet.[ch],src/init.c (triplet_to_matrix): Add a coercion
	for tripletMatrix to matrix.

2004-12-13  Douglas Bates  <bates@bates1-home>

	* R/AllClass.R (.onLoad): Eliminate the bbCrosstab class, which is
	no longer used.

	* src/R_ldl.c: Created an R-specific version of the ldl.[ch] files
	with dynamic allocation of scratch arrays.

	* src/ssclme.c (ssclme_copy_ctab): Fixed bug in creation of ZtZ
	for multivariate random effects with multiple grouping factors.
	Fixes part but not all of #15.

2004-12-03  Douglas Bates  <bates@bates1-home>

	* src/lmeRep.c (lmeRep_factor): order of operations for multiple
	scalar grouping factors corrected.

2004-11-29  Douglas Bates  <bates@bates1-home>

	* src/bCrosstab.c: remove diag_update which is no longer used

2004-11-16  Douglas Bates  <bates@bates1-home>

	* src/Metis_utils.c: Move metis.h include to C sources so that the
	.h file can be included.

2004-11-12  Douglas Bates  <bates@bates1-home>

	* src/LU.c,geMatrix.c,trMatrix.c, etc.:
	Complete allocation of slots in NEW_OBJECT.

	* src/Mutils.h: Moved list of symbols to an include file

2004-11-11  Douglas Bates  <bates@bates1-home>
