@@ -1,3 +1,7 @@
+2005-02-04  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/Matrix.R: add more sophisticated show() method.
+
 2005-01-26  Douglas Bates  <bates@bates7>
 
 	* R/AllGeneric.R: Added matrix exponential generic expm and a method
@@ -290,7 +294,7 @@
 
 	* aclocal.m4 (ac_clean_files): Replaced this with Kurt Hornik's
 	version for R-1.5.0
-	
+
 
 2001-12-10  Douglas Bates  <bates@stat.wisc.edu>
 
